--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<!-- <br>An ISO 9001:2015 Certified Institution-->
 	</p>
 	<h4> <b>
-			<script language="JavaScript1.2" type="text/javascript">
+			/*<script language="JavaScript1.2" type="text/javascript">
 
 				var message = "AUTONOMOUS CAMPUS"
 				var neonbasecolor = "black"
@@ -115,7 +115,7 @@
 				beginneon()
 
 
-			</script>
+			</script>*/
 			<font color="black"><span id="neonlight0" style="color: red;">A</span><span id="neonlight1"
 					style="color: red;">U</span><span id="neonlight2" style="color: red;">T</span><span id="neonlight3"
 					style="color: red;">O</span><span id="neonlight4" style="color: red;">N</span><span id="neonlight5"
@@ -125,7 +125,7 @@
 				</span><span id="neonlight11" style="color: red;">C</span><span id="neonlight12"
 					style="color: red;">A</span><span id="neonlight13" style="color: red;">M</span><span
 					id="neonlight14" style="color: red;">P</span><span id="neonlight15"
-					style="color: black;">U</span><span id="neonlight16" style="color: black;">S</span></font>
+					style="color: red;">U</span><span id="neonlight16" style="color: red;">S</span></font>
 		</b></h4>
 	</center>
 	<img id="all-img" src="all.png" alt="" height="100" width="300">
