--- a/index.html
+++ b/index.html
@@ -50,11 +50,45 @@
 		.dropdown-item {
 			color: #007bff;
 		}
+		.jumbotron {
+            background-color: cornflowerblue;
+            border: 10px;
+			text-align: center;
+        }
+		.footer-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #222222;
+  height: 200px;
+  animation: colorful 5s infinite;
+}
+
+@keyframes colorful {
+  0% {
+    background-color: #ff0000;
+  }
+  20% {
+    background-color: #ff7f00;
+  }
+  40% {
+    background-color: #ffff00;
+  }
+  60% {
+    background-color: #00ff00;
+  }
+  80% {
+    background-color: #0000ff;
+  }
+  100% {
+    background-color: #4b0082;
+  }
+}
 	</style>
 </head>
 
 <body>
-	<img src="mainlogo.png" alt="" height="100" width="400" align="left">
+	<img src="mainlogo.png" alt="" height="100" width="480" align="left">
 	<h4 style="align:center;margin-bottom: 0px;margin-top: 0px;"><b>EAMCET CODE: </b><span style="color:red">MRET</span>
 	</h4>
 	<p> Permanently affiliated to <span style="color:red">JNTUH </span>| Approved by <span
@@ -62,7 +96,6 @@
 		<!-- <br>An ISO 9001:2015 Certified Institution-->
 	</p>
 	<h4> <b>
-			
 			<font color="black"><span id="neonlight0" style="color: red;">A</span><span id="neonlight1"
 					style="color: red;">U</span><span id="neonlight2" style="color: red;">T</span><span id="neonlight3"
 					style="color: red;">O</span><span id="neonlight4" style="color: red;">N</span><span id="neonlight5"
@@ -75,7 +108,7 @@
 					style="color: red;">U</span><span id="neonlight16" style="color: red;">S</span></font>
 		</b></h4>
 	</center>
-	<img id="all-img" src="all.png" alt="" height="100" width="300">
+	<img id="all-img" src="all.png" alt="" height="100" width="440">
 	<!--<div class="head-base">
 	</div>-->
 	<div class="head-text">
@@ -124,6 +157,25 @@
 			</ul>
 		</div>
 	</nav>
+	<div class="jumbotron">
+		<h1>MRIET NOTES PAGE</h1>
+		<p>Find the best study documents to ace your way through education.</p>
+		//himanshu
+		<p></p>
+	  </div>
+	  <footer>
+		<div class="footer-nav">
+		  <ul>
+			<li><a href="#I YEAR" accesskey="s">I YEAR</a></li>
+			<li><a href="#II YEAR" accesskey="f">II YEAR</a></li>
+			<li><a href="#III YEAR" accesskey="e">III YEAR</a></li>
+			<li><a href="#IV YEAR" accesskey="a">IV YEAR</a></li>
+		  </ul>
+		</div>
+		<div class="footer-content" style="background-color: #010101; text-align: center; padding: 20px;">
+		  <p>&copy; 2023 <a href="MRiet.ac.in">MRIET</a> All rights reserved.</p>
+		</div>
+	  </footer>  
 
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
