--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>COMPUTER SCIENCE & ENGINEERING LECTURE NOTES</title>
-	<!-- Bootstrap CSS -->
+	<!-- himanshu -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<style>
 		#all-img {
@@ -160,7 +160,6 @@
 	<div class="jumbotron">
 		<h1>MRIET NOTES PAGE</h1>
 		<p>Find the best study documents to ace your way through education.</p>
-		//himanshu
 		<p></p>
 	  </div>
 	  <footer>
